<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:layout_height="180dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="5dp"
   >


        <EditText
            android:id="@+id/editTextEmail"
            style="@style/editText_style"
            android:layout_width="175dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="Username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/editText_style"
            android:layout_width="175dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="Password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/cancelButton"
                style="@style/button_style"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="Cancel"
                android:textSize="15sp" />

            <Button
                android:id="@+id/okayButton"
                style="@style/button_style"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"

                android:text="Log In"
                android:textSize="15sp" />
        </LinearLayout>


</LinearLayout>