...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/claim_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="numberSigned"
            android:hint="how many claims?"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/LightSlateGray"
            android:textColor="@color/White"
            android:textSize="15sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/claim_button"
            android:textSize="15sp"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="Claim"
            style="@style/button_style"/>
...
