<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shelterListView"
        android:title = "Search for shelter"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
    >

</item>
</menu>