<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="100dp"
    android:paddingBottom="100dp"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/main_activity_layout"
    tools:context="com.example.philipphiri.homelessapp.WelcomePageActivity">

        <ImageView
            android:contentDescription="logo"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/textView"
            android:text="Welcome!"
            style="@style/textView_style"
            android:layout_margin="30dp"
            android:textSize="30sp"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/loginButton"
                style="@style/button_style"
                android:layout_gravity="center"
                android:text="Login"


                />

            <Button
                android:id="@+id/regButton"
                style="@style/button_style"
                android:layout_gravity="center"
                android:text="Register"
/>
        </LinearLayout>


</LinearLayout>